@@ -1,4 +1,5 @@
 HEAD
+	+ Avoid errors when parsing JSON for dashboard widgets
 	+ Force restore of configuration backup from 3.X by using custom script
 	+ Adapt nginx conf to allow vncviewer for zentyal-virt
 	+ Add zentyal-virt icon
